--- a/src/main/resources/fxml/toggle1Screen.fxml
+++ b/src/main/resources/fxml/toggle1Screen.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="620.0" styleClass="root" stylesheets="@../css/toglleScreenStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Toggle1ScreenController">
     <children>
-        <HBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <HBox prefHeight="200.0" prefWidth="620.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <padding>
                 <Insets top="20.0" />
             </padding>
@@ -18,15 +18,15 @@
                     <HBox.margin>
                         <Insets />
                     </HBox.margin>
-               <padding>
-                  <Insets left="20.0" top="10.0" />
-               </padding>
+                    <padding>
+                        <Insets left="20.0" top="10.0" />
+                    </padding>
                 </Label>
             </children>
         </HBox>
         <HBox alignment="CENTER_RIGHT" layoutX="200.0" layoutY="260.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <children>
-                <JFXButton id="button" fx:id="exitButton" onAction="#exit" prefHeight="35.0" prefWidth="120.0" text="WYJŚCIE">
+                <JFXButton id="button" onAction="#exit" prefHeight="35.0" prefWidth="120.0" text="WYJŚCIE">
                     <cursor>
                         <Cursor fx:constant="HAND" />
                     </cursor>
@@ -34,14 +34,14 @@
                         <Insets right="25.0" />
                     </HBox.margin>
                 </JFXButton>
-            <JFXButton id="button" fx:id="saveButton" onAction="#save" prefHeight="35.0" prefWidth="120.0" text="ZAPISZ PLIK">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-               <HBox.margin>
-                  <Insets right="25.0" />
-               </HBox.margin>
-            </JFXButton>
+                <JFXButton id="button" fx:id="saveButton" onAction="#save" prefHeight="35.0" prefWidth="120.0" text="ZAPISZ PLIK">
+                    <cursor>
+                        <Cursor fx:constant="HAND" />
+                    </cursor>
+                    <HBox.margin>
+                        <Insets right="25.0" />
+                    </HBox.margin>
+                </JFXButton>
             </children>
         </HBox>
     </children>
