--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -13,6 +13,7 @@
 }
 
 .button {
+
     -fx-background-color: #373E48;
     -fx-font-family: Calibri;
     -fx-font-size: 18;
@@ -22,7 +23,7 @@
 
 .button:hover {
     -fx-background-color: #EF6C00;
-    -fx-font-family: "Lucida Sans Typewriter";
+    /*-fx-font-family: "Lucida Sans Typewriter";*/
     -fx-background-radius: 0;
     -fx-font-style: italic;
 }
@@ -30,9 +31,28 @@
 .buttonList {
     -fx-background-color: #354450;
     -fx-font-size: 15;
+    /*-fx-background-image: url("/icons/clipboards.png");
+    -fx-background-size: 100 117;
+    -fx-background-repeat: no-repeat;*/
 }
 
 .buttonList:hover {
     -fx-background-color: #0C4A6E;
     -fx-font-size: 12;
+}
+
+.label {
+    /*-fx-text-fill: #064492;*/
+    -fx-text-fill: linear-gradient(to right, #D98F16, #A24C07);
+    -fx-font-weight: bold;
+    -fx-font-style: italic;
+    -fx-font-family: "Verdana";
+    -fx-text-alignment: center;
+    -fx-font-size: 20;
+}
+
+.region {
+    -fx-background-color: #3F8993;
+    -fx-background-color: rgba(0, 0, 0, 1.5);
+    -fx-background-color: linear-gradient(to right, #21375B, #000C1F);
 }
