--- a/src/main/resources/fxml/toggle2Screen.fxml
+++ b/src/main/resources/fxml/toggle2Screen.fxml
@@ -4,6 +4,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
@@ -14,7 +16,7 @@
                 <Insets top="20.0" />
             </padding>
             <children>
-                <Label fx:id="label" alignment="TOP_LEFT" prefHeight="80.0" prefWidth="620.0" wrapText="true">
+                <Label fx:id="label" alignment="TOP_LEFT" prefHeight="80.0" prefWidth="640.0" wrapText="true">
                     <HBox.margin>
                         <Insets />
                     </HBox.margin>
@@ -24,25 +26,44 @@
                 </Label>
             </children>
         </HBox>
-        <HBox alignment="CENTER_RIGHT" layoutX="200.0" layoutY="260.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <HBox alignment="CENTER_RIGHT" layoutX="200.0" layoutY="260.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <children>
-                <JFXButton id="button" onAction="#exit" prefHeight="35.0" prefWidth="120.0" text="WYJŚCIE">
+                <JFXButton id="button" onAction="#exit" prefHeight="35.0" prefWidth="130.0" text="Zamknij">
                     <cursor>
                         <Cursor fx:constant="HAND" />
                     </cursor>
                     <HBox.margin>
                         <Insets right="25.0" />
                     </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="27.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../icons/cross-delete-black-circular-button.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                 </JFXButton>
-                <JFXButton id="button" fx:id="saveButton" onAction="#save" prefHeight="35.0" prefWidth="120.0" text="ZAPISZ PLIK">
+                <JFXButton id="button" fx:id="saveButton" onAction="#save" prefHeight="35.0" prefWidth="130.0" text="Zapisz plik">
                     <cursor>
                         <Cursor fx:constant="HAND" />
                     </cursor>
                     <HBox.margin>
                         <Insets right="25.0" />
                     </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../icons/save.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                 </JFXButton>
             </children>
         </HBox>
+        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="42.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="42.0">
+            <image>
+                <Image url="@../icons/compare.png" />
+            </image>
+        </ImageView>
     </children>
 </AnchorPane>
